--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,23 @@
 [tool.poetry]
 name = "django-urlauth-egguy"
-version = "0.2.0"
+version = "0.2.2"
 description = "Django application for user authentication with key in hypertext link"
 authors = ["egguy <etienne.guilluy@gmail.com>"]
 license = "BSD"
+packages = [
+    { include = "urlauth" },
+    { include = "urlauth/**/*.py" },
+]
 
 [tool.poetry.dependencies]
-python = "^2.7"
-future = "^0.18.2"
+python = "^3.7"
+django = ">=1.11"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
