--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "django-urlauth-egguy"
-version = "0.2.2"
+version = "0.2.3"
 description = "Django application for user authentication with key in hypertext link"
 authors = ["egguy <etienne.guilluy@gmail.com>"]
 license = "BSD"
+readme = "README.md"
 packages = [
     { include = "urlauth" },
     { include = "urlauth/**/*.py" },
