--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,62 @@
-[tool.poetry]
-name = "django-urlauth-egguy"
-version = "0.2.3"
-description = "Django application for user authentication with key in hypertext link"
-authors = ["egguy <etienne.guilluy@gmail.com>"]
-license = "BSD"
-readme = "README.md"
-packages = [
-    { include = "urlauth" },
-    { include = "urlauth/**/*.py" },
-]
-
-[tool.poetry.dependencies]
-python = "^3.7"
-django = ">=1.11"
-
-[tool.poetry.dev-dependencies]
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
 [tool.isort]
 profile = "black"
+
+[tool.pdm.dev-dependencies]
+test = [
+    "pytest>=7.4.4",
+    "pytest-django>=4.7.0",
+    "pytest-cov>=4.1.0",
+]
+lint = [
+    "pre-commit>=3.5.0",
+    "ruff>=0.1.14",
+]
+
+[tool.pdm.scripts]
+test = "pytest"
+lint = "ruff ."
+fmt = "ruff format ."
+
+
+
+[project]
+name = "django-urlauth-egguy"
+version = "0.3.0"
+description = "Django application for user authentication with key in hypertext link"
+authors = [
+    {name = "egguy", email = "etienne.guilluy@gmail.com"},
+    {name = "Grigoriy Petukhov", email = "lorien@lorien.name"},
+]
+dependencies = [
+    "django>=1.11",
+]
+requires-python = ">=3.8"
+readme = "README.md"
+license = {text = "BSD"}
+keywords = ["django application authentication authorization"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Web Environment",
+    "Framework :: Django",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: BSD License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Topic :: Utilities",
+]
+
+[project.urls]
+Homepage = "https://github.com/egguy/django-urlauth/"
+
+[tool.pytest.ini_options]
+addopts = "--nomigrations --create-db --reuse-db"
+DJANGO_SETTINGS_MODULE = "tests.test_settings"
+pythonpath = ["src", "tests", "./"]
+python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
+# testpaths = [
+#     "tests",
+# ]
